--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -44,4 +44,5 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - intro.flr
+  - intro.flr
+  - SequencedLoader.flr
