--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flare_splash_screen
 description: Facilitator for having a Splash screen with a Flare animation until some work has been done for the initialization of the app
-version: 1.1.1
+version: 2.0.0
 author: jaumard <jimmy.aumard@gmail.com>
 homepage: https://github.com/jaumard/flare_splash_screen
 
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   flare_flutter: ^1.3.4
+  flare_loading: ^1.0.0
   flutter:
     sdk: flutter
 
