--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -45,4 +45,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - intro.flr
-  - SequencedLoader.flr
+  #- SequencedLoader.flr
