--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: flare_splash_screen
 description: Facilitator for having a Splash screen with a Flare animation until some work has been done for the initialization of the app
-version: 2.1.2
+version: 2.1.3
 author: jaumard <jimmy.aumard@gmail.com>
 homepage: https://github.com/jaumard/flare_splash_screen
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.7.8 <2.0.0"
 
 dependencies:
-  flare_loading: ^2.0.1
+  flare_loading: ^2.0.2
     #path: '../flare_loading'
   flutter:
     sdk: flutter
