--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: flare_splash_screen
 description: Facilitator for having a Splash screen with a Flare animation until some work has been done for the initialization of the app
-version: 3.0.1
-author: jaumard <jimmy.aumard@gmail.com>
+version: 4.0.0
 homepage: https://github.com/jaumard/flare_splash_screen
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.7.8 <2.0.0"
 
 dependencies:
-  flare_loading: ^2.1.1
-    #path: '../flare_loading'
+  flare_loading: ^3.0.0
+  #path: '../flare_loading'
   flutter:
     sdk: flutter
 
